[gd_scene load_steps=6 format=3 uid="uid://dtcgj6ee8jt2t"]

[ext_resource type="PackedScene" uid="uid://clbi7qphyh0so" path="res://sources/minigames/base/hear_and_find/syllables_minigame.tscn" id="1_hauef"]
[ext_resource type="Script" uid="uid://b5own5tlvbofc" path="res://sources/minigames/jellyfish/jellyfish_minigame.gd" id="2_gnjlp"]
[ext_resource type="Texture2D" uid="uid://c0shai0eqdrbf" path="res://assets/minigames/jellyfish/graphic/gauge_icon_jellyfish_empty.png" id="4_1m7js"]
[ext_resource type="Texture2D" uid="uid://cq87j1xw4c31r" path="res://assets/minigames/jellyfish/graphic/gauge_icon_jellyfish_full.png" id="5_4gwjw"]
[ext_resource type="Texture2D" uid="uid://d60ylt2dvc2s" path="res://assets/minigames/jellyfish/graphic/background.png" id="6_sn7hv"]

[node name="JellyfishMinigame" instance=ExtResource("1_hauef")]
script = ExtResource("2_gnjlp")
lesson_nb = 12
difficulty = 4
max_number_of_lives = 5
max_progression = 8

[node name="MinigameUI" parent="." index="1"]
empty_progression_icon = ExtResource("4_1m7js")
full_progression_icon = ExtResource("5_4gwjw")

[node name="TextureRect" type="TextureRect" parent="GameRoot" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_sn7hv")

[node name="SpawningSpace" type="Control" parent="GameRoot" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1400, 2.08165e-12)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -800.0
offset_right = 600.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpawnTimer" type="Timer" parent="GameRoot" index="2"]

[connection signal="timeout" from="GameRoot/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
